# ece598_quickIoT

./: .gitignore  CMakeLists.txt  README.md  results.txt  simulation.cpp
modules/: PIM.cpp  PIM.h  bus_interface.cpp  bus_interface.h  host_cpu.cpp  host_cpu.h  modules.h  sensors.cpp  sensors.h  utilities.h
